# pconv

./: LICENSE  README.md  pyproject.toml
src/: benchmark_2d_networks.py  benchmark_3d.py  pconv2d.py  pconv3d.py
src/benchmarks/: benchmark_2d.py  benchmark_2d_networks.py  benchmark_3d.py  benchmark_3d_networks.py  test_gradient_2d.py  test_gradient_3d.py  test_large_network.py  test_training_2d.py  test_training_3d.py
